2018-02-08 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: bumping version to 3.0.2

2018-02-08 Ronnie Brunner <ronnie@apache.org>
    * doc/apachetest.tcl: make independent from TclX adding
    our own 'kill' procedure. Changing signal to stop the
    http webserver as KILL
    * doc/runtests.tcl: removing depend on the prefork module

2018-02-03 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivetPkgInit.c: changing way we determine the
    namespace pointer in order to avoid the necessity of gaining 
    access to the module globals and therefore avoid including 
    mod_rivet.h. The macro APLOG_USE_MODULE introduced in
    mod_rivet.h makes the library load fail outside
    mod_rivet and Apache
    * rivet/pkgIndex.tcl: recreated from scratch

2018-01-23 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: bumping version number to 3.0.1
    * doc/rivet.xml.in,doc/xml/request.xml: wrong links and information
    about MPM support fixed
    * src/mod_rivet_ng/mod_rivet.h: add APLOG_USE_MODULE
    macro
    * src/mod_rivet/ng/rivet_worker_mpm.c: number
    of threads waited on exit by the supervisor was wrong
    and it's now the acutal number of threads available,
    variable uninitalized in loop fixed 

2018-01-23 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/lazybridge.xml: more improvements and
    inclusion of new comments to the code
    * doc/xml/commands.xml: rather cosmetic improvment 
    to the page of ::rivet::try
    * src/mod_rivet_ng/rivet_lazy_mpm.c: more comments

2018-01-19 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/installation.xml: various broken links fixed
    * doc/xml/internals.xml: expanding some explanations and changing
    links to the Apache server from version 2.2 to 2.4
    * doc/xml/lazybridge.xml: expanding code explanations
    * src/mod_rivet_ng/rivet_lazy_mpm.c: commenting code in
    various functions

2018-01-17 Massimo Manghi <mxmanghi@apache.org>
    * : Released as 3.0.0
