@@ -1,6 +1,6 @@
 Apache Rivet
 
-Copyright 2002-17 The Apache Software Foundation
+Copyright 2002-2018 The Apache Software Foundation
 
 This product includes software developed by
 The Apache Software Foundation (http://www.apache.org/).
