@@ -1,3 +1,9 @@
+2018-02-17 Massimo Manghi <mxmanghi@apache.org>
+    * NOTICE: update copyright statement
+    * src/mod_rivet_ng/worker_prefork_common.c: Rivet_CleanupProcessor
+    to call RivetCache_Cleanup
+    * doc/rivet.xml: new version in docs
+
 2018-02-08 Massimo Manghi <mxmanghi@apache.org>
     * VERSION,configure.ac: bumping version to 3.0.2
 
